# roost

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/: README.md  index.ts  install.js  package-lock.json  package.json  tsconfig.json
scripts/: release.sh
src/: ca.rs  cert.rs  cli.rs  config.rs  doctor.rs  domain.rs  hosts.rs  lib.rs  main.rs  store.rs  trust.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/serve/: config.rs  daemon.rs  mod.rs  proxy.rs
tests/: ca_create.rs  ca_list.rs  ca_load.rs  ca_remove.rs  cert_expiry.rs  cert_generate.rs  cert_renewal.rs  cert_save_load.rs  cli_help.rs  cli_init.rs  common.rs  config_add_triggers_reload.rs  config_lock.rs  config_paths.rs  config_roundtrip.rs  daemon_reload.rs  daemon_stale.rs  daemon_start_stop.rs  daemon_state.rs  domain_add_remove.rs  domain_get_cert_output.rs  domain_set_ca.rs  domain_validation.rs  domain_validation_tlds.rs  e2e_happy_path.rs  e2e_serve_flow.rs  help_completeness.rs  hosts_add_remove.rs  init_creates_structure.rs  init_idempotent.rs  project_roostrc.rs  proxy_forward.rs  proxy_headers.rs  proxy_sni_match.rs  proxy_unknown_domain.rs  serve_config_add_auto_domain.rs  serve_config_add_remove.rs  serve_config_list.rs  serve_config_merge.rs  trust_store_trait.rs
